<resources>
    <string name="app_name">Monderong</string>

    <!-- main menu -->
    <string name="action_settings">Settings</string>
    <string name="menu_illustration">Menu illustration</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="load">Load</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>

    <!-- room fragment -->
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="pick">Pick</string>
    <string name="use">Use</string>
    <string name="roomIllustration">Room image</string>

    <!-- game end -->
    <string name="victory">Victory!</string>
    <string name="youWon">YOU WON!!</string>
    <string name="backToMenu">Back to main menu</string>
    <string name="victoryImage">Image of your victory.</string>
    <string name="gameOver">Game over!</string>
    <string name="youLost">The dragon killed you!</string>
    <string name="restartGame">Restart game</string>

    <!-- items -->
    <string name="torch">Torch</string>
    <string name="firelock">Firelock</string>
    <string name="pickNothing">There is nothing</string>
    <string name="sword">Sword</string>
    <string name="treasure">Treasure</string>
    <string name="useNothing">You have nothing</string>
    <string name="flamingTorch">Flaming torch</string>

    <!-- rooms and their descriptions-->
    <string name="forest">Forest</string>
    <string name="startDescription">It\'s a very dark night. You are in the middle of a forest.</string>
    <string name="uninterestingPlace">Uninteresting place</string>
    <string name="uninterestingDescription">This is totally uninteresting place.</string>
    <string name="caveEntrance">Cave entrance</string>
    <string name="scaryForestDescription">This forest is scary.</string>
    <string name="entranceDescription">This is the entrance to the legendary Great Cave of Monderong. You are scared to go in without a light.</string>
    <string name="cave">Cave</string>
    <string name="firstCaveDescription">The cave does not look quite as interesting as you imagined.</string>
    <string name="crossroad">Crossroad</string>
    <string name="crossroadDescription">You find yourself on a crossroad. Strange smell and noise comes from a hall in the north.</string>
    <string name="dragon">Dragon!</string>
    <string name="dragonDescription">Prepare for a battle, the dragon noticed you and wants to fight!</string>
    <string name="deadDragon">Dead dragon</string>
    <string name="deadDragonDescription">The body of the dragon lies on the hall\'s floor.</string>
    <string name="stinkyCave">Stinky cave</string>
    <string name="stinkyCaveDescription">The awful smell of the dead dragon reminds you of the glorious battle.</string>
    <string name="closeCaveDescription">You are getting closer to the mystical treasure of Monderong.</string>
    <string name="anotherForestDescription">Forest. A tree. And another. What would you expect, it\'s a forest.</string>
    <string name="armory">Armory</string>
    <string name="armoryDescription">Small room with a bunch of weapons.</string>
    <string name="treasureRoom">Treasure room</string>
    <string name="treasureDescription">Finally! There is the ancient treasure, let\'s get it to a museum.</string>
    <string name="caveVictoryDescription">You can already feel the sensation of victory.</string>
    <string name="meadow">Meadow</string>
    <string name="meadowDescription">Small meadow.</string>
    <string name="lostForestDescription">You are kinda lost in this forest, aren\'t you?</string>
    <string name="caveEntranceDescription2">This is the entrance to the legendary Great Cave of Monderong.</string>

    <!-- toast messages -->
    <string name="noUse">There is no use for this item right now.</string>
    <string name="firelockUsed">You lid up the torch using the firelock.</string>
    <string name="flamingTorchUsed">You may go in with the flaming torch.</string>
    <string name="swordUsed">After a long battle, you finally slayed the dragon!</string>
    <string name="pickup">You\'ve picked up \ </string>


    <string name="theHelp">This is a text-based adventure. You click on a direction (north, east, south, west) to go to a room in that direction. Sometimes not all directions are available. In these rooms you can pick up different items and use them.</string>

</resources>
