<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/menuHeader"
            style="@style/menuHeader"
            android:shadowColor="@android:color/holo_blue_bright"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/menuImage"/>

        <ImageView
            android:id="@+id/menuImage"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:layout_constraintTop_toBottomOf="@+id/menuHeader"
            app:srcCompat="@drawable/talir"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            android:contentDescription="@string/menu_illustration" />

        <Button
            android:id="@+id/startButton"
            style="@style/menuButton"
            android:text="@string/start"
            app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuImage" />

        <Button
            android:id="@+id/buttonHelp"
            style="@style/menuButton"
            android:text="@string/help"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonExit"
            tools:layout_editor_absoluteX="177dp" />

        <Button
            android:id="@+id/buttonExit"
            style="@style/menuButton"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHelp"
            tools:layout_editor_absoluteX="194dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>