<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/game_over_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameOverHeader"
        style="@style/menuHeader"
        android:text="@string/gameOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gameOverImage"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/victoryImage"
        app:layout_constraintBottom_toTopOf="@+id/gameOverDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverHeader"
        app:srcCompat="@drawable/talir" />

    <TextView
        android:id="@+id/gameOverDescription"
        style="@style/roomDescription"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/gameOverImage"
        app:layout_constraintBottom_toTopOf="@+id/restartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restartGame"
        style="@style/menuButton"
        android:text="@string/restartGame"
        app:layout_constraintBottom_toTopOf="@id/backToMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameOverDescription" />

    <Button
        android:id="@+id/backToMenu"
        style="@style/menuButton"
        android:text="@string/backToMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restartGame" />


</androidx.constraintlayout.widget.ConstraintLayout>