<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/victory_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/victoryHeader"
            style="@style/menuHeader"
            android:text="@string/victory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/victoryImage"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:contentDescription="@string/victoryImage"
            app:layout_constraintBottom_toTopOf="@+id/victoryDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/victoryHeader"
            app:srcCompat="@drawable/talir" />

        <TextView
            android:id="@+id/victoryDescription"
            style="@style/roomDescription"
            app:layout_constraintTop_toBottomOf="@id/victoryImage"
            app:layout_constraintBottom_toTopOf="@+id/backToMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backToMenu"
            style="@style/menuButton"
            android:text="@string/backToMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/victoryDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>